some layout bugs fixed

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -328,6 +328,12 @@ a:hover{
     max-width: 600px;
     padding: 0;
 }
+.selected-post-popup multiplead{
+    display: none;
+}
+.selected-post-popup singlead{
+    display: inline;
+}
 .sorting-h2{
     grid-column: 1 / 3;
     margin: 0 0 5px;
@@ -1164,6 +1170,9 @@ div[data-block-name="button"] a{
 .mt-10{
     margin-top: 10px;
 }
+singlead{
+    display: none;
+}
 @media (min-width: 992px) and (max-height: 460px){
     .sorting-column{
         position: static;
@@ -1230,6 +1239,9 @@ div[data-block-name="button"] a{
         margin: 0;
         box-shadow: 0px -2px 8px 0px rgb(34 60 80 / 20%);
         padding: 30px 15px 20px;
+        border-radius: unset;
+        border-top-left-radius: 6px;
+        border-top-right-radius: 6px;
     }
     .sorting-column-collapsed{
         display: flex;
@@ -1303,7 +1315,7 @@ div[data-block-name="button"] a{
     .form-open{
         font-size: 0;
         background-color: var(--logo-color);
-        width: 31px;
+        width: 30px;
         height: 30px;
         border: unset;
         border-radius: 50%;
@@ -1329,9 +1341,32 @@ div[data-block-name="button"] a{
     }
     .form-open-span{
         display: inline-block;
-        font-size: 26px;
+        font-size: 25px;
         font-weight: 100;
         color: var(--main-bg-color);
+    }
+    .open-search{
+        display: block;
+        justify-self: flex-end;
+        background-color: var(--logo-color);
+        object-fit: none;
+        border-radius: 50%;
+    }
+    .search-submit{
+        right: 15px;
+    }
+    .open-search-active{
+        background-image: url(/img/thin-close-icon-white.svg);
+    }
+    .open-search-active + .search-form{
+        transform: scale(1, 1);
+        transition: transform .1s;
+    }
+    .search-input{
+        max-width: 97%;
+        width: 100%;
+        display: block;
+        margin: auto;
     }
     .form-bg-open+.form-open .form-open-span{
         transform: rotate(45deg);
@@ -1384,29 +1419,6 @@ div[data-block-name="button"] a{
     }
     .form-wrapper{
         max-width: 300px;
-    }
-    .open-search{
-        display: block;
-        justify-self: flex-end;
-        background-color: var(--logo-color);
-        object-fit: none;
-        border-radius: 50%;
-    }
-    .search-submit{
-        right: 15px;
-    }
-    .open-search-active{
-        background-image: url(/img/thin-close-icon-white.svg);
-    }
-    .open-search-active + .search-form{
-        transform: scale(1, 1);
-        transition: transform .1s;
-    }
-    .search-input{
-        max-width: 97%;
-        width: 100%;
-        display: block;
-        margin: auto;
     }
     .chip a{
         padding: 5px;
@@ -1461,7 +1473,7 @@ div[data-block-name="button"] a{
         padding: 6px 10px;
     }
     .modal-inner{
-        max-height: 90vh;
+        max-height: 80vh;
         overflow: auto;
     }
 }
